--- a/kubernetes-files/backend-deployment.yaml
+++ b/kubernetes-files/backend-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: backend
-        image: 905418452515.dkr.ecr.us-east-1.amazonaws.com/backend:7
+        image: 843756393997.dkr.ecr.ap-south-1.amazonaws.com/2nd10weeksofcloudops-main-backend:latest
         ports:
         - containerPort: 80
         env:
