--- a/kubernetes-files/frontend-deploy-service.yaml
+++ b/kubernetes-files/frontend-deploy-service.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: frontend
-        image: 843756393997.dkr.ecr.ap-south-1.amazonaws.com/2nd10weeksofcloudops-main-frontend:latest
+        image: 843756393997.dkr.ecr.ap-south-1.amazonaws.com/frontend:latest
         ports:
         - containerPort: 80
       #  env:   # <-- Fixed indentation
