--- a/kubernetes-files/backend-deployment.yaml
+++ b/kubernetes-files/backend-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: backend
-        image: 843756393997.dkr.ecr.ap-south-1.amazonaws.com/backend:latest
+        image: 843756393997.dkr.ecr.ap-south-1.amazonaws.com/backend:1
         ports:
         - containerPort: 80
         env:
