--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
-DB_HOST=database-1.cpc0ou82ca5b.ap-south-1.rds.amazonaws.com
-DB_USERNAME=admin
-DB_PASSWORD="gayatri1234"
+DB_HOST=database-3.mysql.database.azure.com
+DB_USERNAME=gayatri
+DB_PASSWORD="Cloud1234"
 PORT=3306
