--- a/.github/workflows/main_nodejs-application.yml
+++ b/.github/workflows/main_nodejs-application.yml
@@ -25,9 +25,20 @@ jobs:
 
       - name: npm install, build, and test
         run: |
+          cd client
           npm install
           npm run build --if-present
           npm run test --if-present
+
+      - name: Copy frontend build to backend
+        run: |
+          cp -r client/build backend/public
+
+      - name: Install backend dependencies
+        run: |
+          cd backend
+          npm install
+
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
