--- a/.github/workflows/main_nodejs-application.yml
+++ b/.github/workflows/main_nodejs-application.yml
@@ -30,9 +30,11 @@ jobs:
           npm run build --if-present
   
 
-      - name: Copy frontend build to backend
+      - name: Copy frontend to backend
         run: |
-          cp -r client/build backend/public
+          mkdir -p backend/public
+          cp -r client/build/* backend/public/
+
 
       - name: Install backend dependencies
         run: |
