--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,6 @@
-DB_HOST=book.rds.com
-DB_USERNAME=gayatri
-DB_PASSWORD="Cloud1234"
-PORT=3306
+DB_HOST=mydbserver.mysql.database.azure.com
+DB_USERNAME=adminuser@mydbserver
+DB_PASSWORD=MySecurePwd123
+DB_PORT=3306
+PORT=3000
+
