--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
-DB_HOST=mydbserver.mysql.database.azure.com
-DB_USERNAME=adminuser@mydbserver
-DB_PASSWORD=MySecurePwd123
+DB_HOST=nodejs-application-server.mysql.database.azure.com
+DB_USERNAME=dyfgncmskq
+DB_PASSWORD=Cloud1234
 DB_PORT=3306
 PORT=3000
 
