--- a/.github/workflows/main_nodejs-application.yml
+++ b/.github/workflows/main_nodejs-application.yml
@@ -40,6 +40,8 @@ jobs:
         run: |
           cd backend
           npm install
+          npm install dotenv
+          sudo pm2 start index.js --name "backendApi"
 
 
       - name: Zip artifact for deployment
