--- a/.github/workflows/main_nodejs-application.yml
+++ b/.github/workflows/main_nodejs-application.yml
@@ -49,7 +49,7 @@ jobs:
 
 
       - name: Zip artifact for deployment
-        run: zip release.zip ./* -r
+          zip -r release.zip . -x "node_modules/*" ".git/*" "client/node_modules/*" "backend/node_modules/*"
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
