--- a/.github/workflows/main_nodejs-application.yml
+++ b/.github/workflows/main_nodejs-application.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy Node.js app to Azure Web App - Nodejs-application
 
 on:
@@ -13,45 +10,39 @@ jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read #This is required for actions/checkout
+      contents: read
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout source code
+        uses: actions/checkout@v4
 
-      - name: Set up Node.js version
+      - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '22.x'
 
-      - name: npm install, build, and test
+      - name: Install and build frontend
         run: |
           cd client
           npm install
-          npm run build --if-present
-  
+          npm run build
 
-      - name: Copy frontend to backend
+      - name: Copy frontend build to backend
         run: |
           mkdir -p backend/public
           cp -r client/build/* backend/public/
-
 
       - name: Install backend dependencies
         run: |
           cd backend
           npm install
-          sudo npm install -g corepack -y
-          corepack enable
-          corepack prepare yarn@stable --activate 
-          sudo npm install -g pm2
-          npm install dotenv
-          sudo pm2 start index.js --name "backendApi"
 
+      - name: Zip backend app for deployment
+        run: |
+          cd backend
+          zip -r ../release.zip . -x "node_modules/*"
 
-      - name: Zip artifact for deployment
-          zip -r release.zip . -x "node_modules/*" ".git/*" "client/node_modules/*" "backend/node_modules/*"
-
-      - name: Upload artifact for deployment job
+      - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
           name: node-app
@@ -60,18 +51,17 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: build
-    
+
     steps:
-      - name: Download artifact from build job
+      - name: Download artifact
         uses: actions/download-artifact@v4
         with:
           name: node-app
 
-      - name: Unzip artifact for deployment
+      - name: Unzip artifact
         run: unzip release.zip
-      
-      - name: 'Deploy to Azure Web App'
-        id: deploy-to-webapp
+
+      - name: Deploy to Azure Web App
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'Nodejs-application'
