--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,4 @@
-DB_HOST=nodejs-application-server.mysql.database.azure.com
-DB_USERNAME=dyfgncmskq
-DB_PASSWORD=Cloud1234
-DB_PORT=3306
-PORT=3000
-
+DB_HOST=fast-gecko-464807-b5:us-central1:gcp-project-db
+DB_USERNAME=root
+DB_PASSWORD="Cloud1234"
+PORT=3306
